--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mongodb": "^6.5.0",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "18.7.5",
